Update BrisaAPI to auto-generated library, small refactor for Login view.

--- a/index.ejs
+++ b/index.ejs
@@ -4,7 +4,7 @@
   <title>Brisa Dashboard</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
   <meta charset="utf-8">
-  <link rel="stylesheet" href="3rdparty/materia.min.css">
+  <link rel="stylesheet" href="3rdparty/<%= process.env.BS_THEME || 'materia.min.css' %>">
   <link rel="stylesheet" href="brisa.css">
 
  </head>
