Large update with Group support, UI refactor with open views and groups in a sidebar, and API update.

--- a/index.ejs
+++ b/index.ejs
@@ -6,10 +6,10 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="3rdparty/<%= process.env.BS_THEME || 'materia.min.css' %>">
   <link rel="stylesheet" href="brisa.css">
-
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
  </head>
 
- <body style="height: 100%;background-color: transparent;">
+ <body style="height: 100%;background-color: transparent; font-family: 'Source Sans Pro'">
 
   <script src="3rdparty/jquery-3.3.1.min.js"></script>
   <script src="3rdparty/popper.min.js"></script>
