--- a/index.ejs
+++ b/index.ejs
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
  </head>
 
- <body style="height: 100%;background-color: transparent; font-family: 'Source Sans Pro'">
+ <body style="height: 100%;background-color: transparent; font-family: 'Source Sans Pro'; font-size: medium;">
 
   <script src="3rdparty/jquery-3.3.1.min.js"></script>
   <script src="3rdparty/popper.min.js"></script>
