Huge update: Stats/Filters, new Outline component.

--- a/index.ejs
+++ b/index.ejs
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="3rdparty/<%= process.env.BS_THEME || 'materia.min.css' %>">
   <link rel="stylesheet" href="brisa.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link rel="icon" id="favicon" type="image/png" href="/favicon.ico"/>
  </head>
 
  <body style="height: 100%;background-color: transparent; font-family: 'Open Sans'; font-size: medium;">
